# poc-tauri-rust-ax-bindings

./: README.md  package.json
public/: index.html
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: callbacks.rs  main.rs  observer.rs  utils.rs
