[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
tauri = { version = "1.0.0", features = ["api-all"] }

# macOS dependencies (crucial for Accessibility features to work)
core-foundation = "0.9.3"
core-graphics-types = "0.1.1"
cocoa = "0.24.0"

# Dependencies for accessibility apis
accessibility = { git = "https://github.com/Hupka/accessibility" }
accessibility-sys = { git = "https://github.com/Hupka/accessibility" }

# Miscellaneous
colored = "2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
